Prevent scrolling the page behind the popup

--- a/css/popup.less
+++ b/css/popup.less
@@ -45,6 +45,7 @@
     }
 
     .fl-scrolls-body {
+        overscroll-behavior:contain;
         height:550px;
         width:100%;
     }
